# loterra

./: Cargo.toml  Developing.md  rust-toolchain.toml
.circleci/: config.yml
.github/workflows/: Basic.yml
artifacts/: LoTerra.wasm  checksums.txt  lottery.wasm
examples/: schema.rs
schema/: all_combination_response.json  all_winner_response.json  config_response.json  execute_msg.json  get_poll_response.json  get_response_randomness.json  handle_msg.json  init_msg.json  instantiate_msg.json  latest_response_drand.json  query_msg.json  round_response.json  terrand_response.json
src/: contract.rs  error.rs  helpers.rs  lib.rs  mock_querier.rs  msg.rs  query.rs  state.rs  taxation.rs
