[package]
name = "lottery"
version = "0.1.0"
authors = ["0xantman <antho74830@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.12.2", features = ["staking"]  }
cosmwasm-storage = { version = "0.12.2" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
# Drand dependencies
drand-verify = "0.1.0"
# Needed due to missing re-exports in paired
fff = "0.2.0"
# Needed due to missing re-exports in paired
groupy = "0.3.0"
# paired = { path = "../paired" }
# paired = { git = "https://github.com/webmaster128/paired", branch = "add-missing-symbols" }
paired = "0.21"
sha2 = "0.9"
hex = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2.67", optional = true }

[dev-dependencies]
cosmwasm-schema = { version = "0.12.2" }
# Drand dependencies
hex = "0.4"
hex-literal = "0.3.1"
